// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarEntity /> should render a avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="medium"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <styled.span
      isCompact={false}
    >
      John Wick
    </styled.span>
    <styled.span
      isCompact={false}
    >
      Guy Killer
    </styled.span>
    <styled.span
      isCompact={false}
    >
      In Cinemas 2019
    </styled.span>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="medium"
    />
  </styled.div>
  <styled.div>
    <styled.span
      isCompact={false}
    >
      John Wick
    </styled.span>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic compact avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="small"
    />
  </styled.div>
  <styled.div>
    <styled.span
      isCompact={true}
    >
      John Wick
    </styled.span>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a compact avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="small"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <styled.span
      isCompact={true}
    >
      John Wick
    </styled.span>
    <styled.span
      isCompact={true}
    >
      (Guy Killer)
    </styled.span>
  </styled.div>
</styled.div>
`;
